--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  min-height: 100vh;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  background-color: white; 
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(20px + 2vmin);
+  font-family: Sansita;
+  color: black;
 }
 
-.App-link {
-  color: #61dafb;
+
+.menu{
+  font-size: calc(18px + 2vmin);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.menu ul{
+  display: flex;
+  list-style: none;
+  white-space: nowrap;
+  overflow: scroll;
+}
+
+.menu li{
+  margin: 0 10px 12px;
+  
+}
+
+.menu li a{
+  display: inline-block;
+  padding: 15px 20px;
+  position: relative;
+  
+  /* padding-bottom: 3px; */
+  /* margin: 0; */
+  color: #989EB9;
+  text-decoration: none;
+}
+
+.menu li a:after{
+  background: none repeat local 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 5px;
+  left: 50%;
+  position: absolute;
+  background: #FFDFD3;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+
+.menu li a:focus{
+  color: black;
+  font-weight: 600;
+}
+
+.menu li a:focus:after{
+  left: 23%;
+  width: 50%;
+}
+
+.menu .active{
+  /* font-weight: 600;
+  border-bottom: 5px solid #FFDFD3;
+  color: black;
+
+  transition: border-bottom 0.3s ease 0s, left 0.3s ease 0s; */
+  
+}
+
+.menu li:last-child{
+  padding-right: 1em;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
 }
