--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'Sansita';
+  src: local('Sansita'), url(./font/static/SansitaSwashed-Medium.ttf) format('truetype');
+}
