--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 
 .menu{
   font-size: calc(18px + 2vmin);
+  scroll-behavior: smooth;
 }
 
 .menu ul{
@@ -32,9 +33,6 @@
   display: inline-block;
   padding: 15px 20px;
   position: relative;
-  
-  /* padding-bottom: 3px; */
-  /* margin: 0; */
   color: #989EB9;
   text-decoration: none;
 }
@@ -60,15 +58,6 @@
 .menu li a:focus:after{
   left: 23%;
   width: 50%;
-}
-
-.menu .active{
-  /* font-weight: 600;
-  border-bottom: 5px solid #FFDFD3;
-  color: black;
-
-  transition: border-bottom 0.3s ease 0s, left 0.3s ease 0s; */
-  
 }
 
 .menu li:last-child{
