--- a/src/components/Recipes.css
+++ b/src/components/Recipes.css
@@ -4,4 +4,13 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    padding-top: 20px;
+}
+
+.recipes .add-button{
+    height: 60px;
+    width: 60px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
 }
